--- a/Zimad/Modules/DetailedRepository/Screen/DetailedRepository.storyboard
+++ b/Zimad/Modules/DetailedRepository/Screen/DetailedRepository.storyboard
@@ -32,7 +32,7 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="GeR-Ra-aTk">
-                                        <rect key="frame" x="70" y="16" width="328" height="131.5"/>
+                                        <rect key="frame" x="70" y="16" width="304" height="131.5"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -42,7 +42,7 @@
                                     <constraint firstItem="GeR-Ra-aTk" firstAttribute="leading" secondItem="E4Z-yX-ZQn" secondAttribute="trailing" id="Pta-rq-pbu"/>
                                     <constraint firstItem="E4Z-yX-ZQn" firstAttribute="top" secondItem="k2A-Us-bYC" secondAttribute="top" constant="25" id="T9A-q6-icp"/>
                                     <constraint firstItem="GeR-Ra-aTk" firstAttribute="top" secondItem="k2A-Us-bYC" secondAttribute="top" constant="16" id="axe-Q0-zDA"/>
-                                    <constraint firstAttribute="trailing" secondItem="GeR-Ra-aTk" secondAttribute="trailing" constant="16" id="uLa-N8-Xjg"/>
+                                    <constraint firstAttribute="trailing" secondItem="GeR-Ra-aTk" secondAttribute="trailing" constant="40" id="uLa-N8-Xjg"/>
                                     <constraint firstAttribute="bottom" secondItem="GeR-Ra-aTk" secondAttribute="bottom" constant="16" id="yOa-gO-bkV"/>
                                 </constraints>
                             </view>
@@ -85,9 +85,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="rSR-Cc-k1I">
+                                <rect key="frame" x="83" y="371" width="248" height="164"/>
+                                <color key="color" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="rSR-Cc-k1I" firstAttribute="centerX" secondItem="Pwr-Hv-hVM" secondAttribute="centerX" id="4ZJ-7s-L0N"/>
                             <constraint firstItem="4S1-ve-O7O" firstAttribute="top" secondItem="ItS-qF-JOi" secondAttribute="bottom" constant="16" id="5nv-99-H1k"/>
                             <constraint firstItem="k2A-Us-bYC" firstAttribute="leading" secondItem="Pwr-Hv-hVM" secondAttribute="leading" id="9DL-Kn-eBI"/>
                             <constraint firstItem="hB7-3B-WE6" firstAttribute="leading" secondItem="Wv0-D3-o86" secondAttribute="leading" id="AE1-B2-6pu"/>
@@ -96,6 +101,7 @@
                             <constraint firstItem="eic-JG-nBC" firstAttribute="top" secondItem="k2A-Us-bYC" secondAttribute="bottom" constant="16" id="GPg-sF-FCM"/>
                             <constraint firstItem="eic-JG-nBC" firstAttribute="centerX" secondItem="Pwr-Hv-hVM" secondAttribute="centerX" id="NJV-0F-UdJ"/>
                             <constraint firstItem="Wv0-D3-o86" firstAttribute="top" secondItem="eic-JG-nBC" secondAttribute="bottom" constant="20" id="OrG-bo-lz0"/>
+                            <constraint firstItem="rSR-Cc-k1I" firstAttribute="centerY" secondItem="Pwr-Hv-hVM" secondAttribute="centerY" id="PB3-mk-JOh"/>
                             <constraint firstItem="hB7-3B-WE6" firstAttribute="trailing" secondItem="Wv0-D3-o86" secondAttribute="trailing" id="RqD-y8-9u8"/>
                             <constraint firstItem="Wv0-D3-o86" firstAttribute="leading" secondItem="Pwr-Hv-hVM" secondAttribute="leading" constant="20" id="XnU-Yp-2xy"/>
                             <constraint firstItem="hB7-3B-WE6" firstAttribute="top" secondItem="Wv0-D3-o86" secondAttribute="bottom" constant="8" id="aJY-ps-iCF"/>
@@ -103,6 +109,8 @@
                             <constraint firstItem="k2A-Us-bYC" firstAttribute="trailing" secondItem="Pwr-Hv-hVM" secondAttribute="trailing" id="atD-ke-nbw"/>
                             <constraint firstItem="4S1-ve-O7O" firstAttribute="leading" secondItem="ItS-qF-JOi" secondAttribute="leading" id="d2K-IA-MwN"/>
                             <constraint firstItem="k2A-Us-bYC" firstAttribute="top" secondItem="kt5-oA-blU" secondAttribute="top" id="d9E-GM-dsE"/>
+                            <constraint firstItem="rSR-Cc-k1I" firstAttribute="height" secondItem="Pwr-Hv-hVM" secondAttribute="height" multiplier="0.2" id="glx-hs-gDw"/>
+                            <constraint firstItem="rSR-Cc-k1I" firstAttribute="width" secondItem="Pwr-Hv-hVM" secondAttribute="width" multiplier="0.6" id="q3Z-SH-Uce"/>
                             <constraint firstItem="k2A-Us-bYC" firstAttribute="height" secondItem="Pwr-Hv-hVM" secondAttribute="height" multiplier="0.2" id="r4G-8I-e9v"/>
                             <constraint firstItem="Pwr-Hv-hVM" firstAttribute="trailing" secondItem="Wv0-D3-o86" secondAttribute="trailing" constant="20" id="sFK-wV-RL3"/>
                             <constraint firstItem="eic-JG-nBC" firstAttribute="height" secondItem="Pwr-Hv-hVM" secondAttribute="height" multiplier="0.31" id="sUx-Ts-wbi"/>
@@ -113,6 +121,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="0OZ-dt-Arc"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="rSR-Cc-k1I" id="MBL-jr-uxS"/>
                         <outlet property="avatarImaveView" destination="eic-JG-nBC" id="5zQ-pG-e7V"/>
                         <outlet property="branchLabel" destination="4S1-ve-O7O" id="cCQ-dg-l9S"/>
                         <outlet property="hashComitLabel" destination="hB7-3B-WE6" id="wWT-P4-V2Y"/>
